# skyways

./: .gitignore  LICENSE  README.md
.github/workflows/: ros-ci.yml  ros2-ci.yml
files/: metadata
scripts/: bridge.sh  client.sh  drone.sh  foxy.sh  mavros.sh  noetic.sh  startup.sh
skyways/: CMakeLists.txt  package.xml
skyways/include/skyways/: WGS84toCartesian.hpp
skyways/launch/: px4.launch
skyways/src/: clear_waypoints.cpp  drone_client.cpp  drone_server.cpp  geofence_follow.cpp  geofence_rectangle.cpp  setpoint_mission.cpp  switch.cpp  waypoint_logger.cpp
skyways/srv/: DataPacket.srv
skyways/txt_files/: WaypointLog.txt
